--- a/package.json
+++ b/package.json
@@ -17,11 +17,7 @@
     "express-validator": "^6.10.0",
     "heroku": "^7.56.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.12.3",
-    "react-redux": "^7.2.4",
-    "react-router-dom": "^5.2.0",
-    "react-yandex-maps": "^4.6.0",
-    "swiper": "^6.7.5"
+    "mongoose": "^5.12.3"
   },
   "devDependencies": {
     "concurrently": "^6.0.1",
