--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "10-weather-app",
   "version": "1.0.0",
+  "engines": {
+    "node": "14.x",
+    "npm": "6.x"
+  },
   "description": "weather app",
   "main": "app.js",
   "scripts": {
