--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "express-validator": "^6.10.0",
     "heroku": "^7.56.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.12.3"
+    "mongoose": "^5.12.3",
+    "valid-url": "^1.0.9"
   },
   "devDependencies": {
     "concurrently": "^6.0.1",
