--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "heroku": "^7.56.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.3",
+    "phoenix": "^1.5.10",
     "valid-url": "^1.0.9"
   },
   "devDependencies": {
