--- a/client/package.json
+++ b/client/package.json
@@ -1,8 +1,7 @@
 {
   "name": "10-weather-app",
   "version": "0.1.0",
-  "private": false,
-  "homepage": "https://sasaafanasienka.github.io/weather-app-mini/",
+  "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
@@ -11,7 +10,6 @@
     "@types/node": "^14.14.41",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
-    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-alert": "^7.0.3",
     "react-dom": "^17.0.2",
@@ -22,13 +20,13 @@
     "redux-thunk": "^2.3.0",
     "sass": "^1.32.11",
     "sass-loader": "^11.0.1",
-    "styled-components": "^5.3.0"
+    "styled-components": "^5.3.0",
+    "web-vitals": "^1.1.1"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -37,6 +35,7 @@
       "react-app/jest"
     ]
   },
+  "proxy": "http://localhost:5000",
   "browserslist": {
     "production": [
       ">0.2%",
