--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "description": "weather app",
   "main": "app.js",
   "scripts": {
+    "start": "node app.js",
     "server": "nodemon app.js",
     "client": "npm run start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\""
