--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "async-file": "^2.0.2",
     "bcryptjs": "^2.4.3",
     "config": "^3.3.6",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-validator": "^6.10.0",
