--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "10-weather-app",
   "version": "0.1.0",
   "private": false,
+  "homepage": "https://sasaafanasienka.github.io/weather-app-client",
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
@@ -20,14 +21,13 @@
     "redux-thunk": "^2.3.0",
     "sass": "^1.32.11",
     "sass-loader": "^11.0.1",
-    "styled-components": "^5.3.0",
-    "web-vitals": "^1.1.1"
+    "styled-components": "^5.3.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build": "react-scripts build"
   },
   "eslintConfig": {
     "extends": [
