--- a/client/package.json
+++ b/client/package.json
@@ -19,8 +19,6 @@
     "react-scripts": "^4.0.3",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
-    "sass": "^1.32.11",
-    "sass-loader": "^11.0.1",
     "styled-components": "^5.3.0"
   },
   "scripts": {
@@ -47,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "sass": "^1.53.0"
   }
 }
